--- a/style.css
+++ b/style.css
@@ -1,1 +1,10 @@
 em {color:green;}
+th {
+  color:white;
+  background:orange;
+}
+
+table,th,td {
+  border:1px solid black;
+  border-collapse:collapse;
+}
