--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ th {
   background:orange;
 }
 
-table,th,td {
+th,td {
   border:1px solid black;
-  border-collapse:collapse;
 }
+ table {border-collapse:collapse;}
